2008-08-29  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Ignore invalid topdirs.
	
2008-08-29  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/FileTypes.py:
	* pycvsanaly2/extensions/file_types.py:

	Add FileTypes extension which adds a new table with information
	about the type (code, ui, i18n, etc.) of every file path.
	
2008-08-28  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	'Top level dirs' and 'revision per files' queries improved.

2008-08-28  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Topdir query fixed. Now, only it takes distinct topdirs.
	
2008-08-28  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/SVNParser.py:

	Do not consider commit messages starting wit 'A ' as an added
	file.
	
2008-08-28  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/profile.py:
	* pycvsanaly2/Timer.py:
	* pycvsanaly2/extensions/Metrics.py:

	Add a profiler to be able to figure out how long it takes
	something and use it in the Metrics extension.
	
2008-08-20  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Add support for C++ and Java metrics.
	
2008-08-19  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/utils.py:
	* pycvsanaly2/extensions/Metrics.py:

	Clean temporary directories up when done.
	
2008-08-19  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Get toplevel dirs only for svn repos.
	
2008-08-08  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	When doing the first checkout in svn, we need to do it for the
	first revision of every top level dir.
	
2008-08-07  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Typo fixed.
